<package format="2">
  <name>ros947d_darknet</name>
  <version>0.0.0</version>
  <description>
    947D darknet_ros utils
  </description>
  <maintainer email="h-yaguchi@947d-tech.co.jp">Hiroaki Yaguchi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>cv_brdige</depend>
</package>
