<package format="2">
  <name>ros947d_geometry</name>
  <version>0.0.0</version>
  <description>
    947D geometry utility
  </description>
  <maintainer email="h-yaguchi@947d-tech.co.jp">Hiroaki Yaguchi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
